[gd_scene load_steps=3 format=3 uid="uid://cj46p1qq7r6sp"]

[ext_resource type="Script" uid="uid://dbr6rxjei60ph" path="res://scenes/ui/hud.gd" id="1_nixt2"]
[ext_resource type="Theme" uid="uid://cav6s4wk6wpbp" path="res://themes/ui.tres" id="3_s44q0"]

[node name="HUD" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_s44q0")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_nixt2")

[node name="TopLeft" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TopRight" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VbxSpace" type="VBoxContainer" parent="TopRight"]
layout_mode = 2

[node name="LblEmpty1" type="Label" parent="TopRight/VbxSpace"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10

[node name="LblEmpty2" type="Label" parent="TopRight/VbxSpace"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10

[node name="DebugItems" type="VBoxContainer" parent="TopRight"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="LblPerformance" type="Label" parent="TopRight/DebugItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS:"

[node name="LblInputMode" type="Label" parent="TopRight/DebugItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Input device:"

[node name="BottomLeft" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="BottomRight" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
